- created pages demo

--- a/public/en/contact.html
+++ b/public/en/contact.html
@@ -30,7 +30,7 @@
   <body>
     <header>
       <h2>
-        <a href="/url/meta/ko">NGINX Demo - Contact - Korean</a>
+        <a href="/url/meta/en">NGINX Demo - Contact - English</a>
       </h2>
       <select id="page-select" onchange="handleOnPageChange()">
         <option value="home">Home</option>
@@ -38,9 +38,9 @@
         <option selected value="contact">Contact</option>
       </select>
       <select id="lang-select" onchange="handleOnChange()">
-        <option value="en">English</option>
+        <option selected value="en">English</option>
         <option value="ja">Japanese</option>
-        <option selected value="ko">Korean</option>
+        <option value="ko">Korean</option>
         <option value="zh-cn">Chinese</option>
       </select>
     </header>
