--- a/public/ko/home.html
+++ b/public/ko/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact - NGINX Demo</title>
+    <title>Home - NGINX Demo</title>
     <style>
       header {
         background-color: lightgrey;
@@ -30,12 +30,12 @@
   <body>
     <header>
       <h2>
-        <a href="/url/meta/ko">NGINX Demo - Contact - Korean</a>
+        <a href="/url/meta/ko">NGINX Demo - Home - Korean</a>
       </h2>
       <select id="page-select" onchange="handleOnPageChange()">
-        <option value="home">Home</option>
+        <option selected value="home">Home</option>
         <option value="about">About</option>
-        <option selected value="contact">Contact</option>
+        <option value="contact">Contact</option>
       </select>
       <select id="lang-select" onchange="handleOnChange()">
         <option value="en">English</option>
